--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "postcss": "^8.4.13",
+    "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
   },
